Add camera to de launch arm

--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,8 @@
   <depend>tf2_geometry_msgs</depend>
 
   <depend>rclcpp_components</depend>
+  <depend>cv_bridge</depend>
+  <test_depend>pytest</test_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
@@ -38,7 +40,6 @@
   <test_depend>launch_ros</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
   <test_depend>launch_testing_ros</test_depend>
-
   <export>
     <build_type>ament_cmake</build_type>
   </export>
