Add images and other change to readme

--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>liat_demo_robot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="octaviopinoross@gmailcom">Octavio Pino Rosas</maintainer>
+  <maintainer email="octaviopinoross@gmail.com">Octavio Pino Rosas</maintainer>
   <license>TODO: License declaration</license>
   <author email="octaviopinoross@gmail.com">Octavio Pino Rosas</author>
 
